# arrp-www

./: .gitmodules  CMakeLists.txt  Dockerfile  README.rst  compile.sh  install.sh  pug-auto-install.sh
apache/: arrp.conf.template
arrp/: generic_main.cpp  generic_printer.hpp
cgi/: arrp-code-post-entry.sh  arrp-code-post.sh
content/cgi/: arrp-code-post-entry.sh  arrp-code-post.sh
content/html/: index.html
css/: style.css
html/: index.html
js/: play.js
nginx/: arrp.template
pug/: CMakeLists.txt  grammar.ebnf  grammar.pug  main.pug  play.pug  reference.pug
pug/pages/: doc.pug  manual.pug  play.pug  reference.pug  research.pug
pug/pages/doc/: compiler.pug  language.pug  target-cpp.pug
pug/pages/manual/: language.pug  syntax.pug
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
systemd/: arrp-website.service.template
tools/: ebnf-to-pug.py
